      by Mikael Jagan.

      \item Accent keys now work in GraphApp Unicode windows, which are used
      by Rgui whenever running in a multibyte locale (so also in UTF-8,
      hence fixing a regression in \R 4.2.0 for users of systems where \R
      4.1 used a single-byte locale).

      \item Completion in Rgui on Windows now works also with non-ASCII
      characters.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item The \code{formula} method of \code{aggregate()} now matches
      the generic in naming its first argument \code{x} (resolving
      \PR{18299} by Thomas Soeiro).

      This means that calling \code{aggregate()} with a formula as a
      named first argument requires name \code{formula} in earlier
      versions of \R and name \code{x} now, so portable code should not
      name the argument (code in many packages did).

      \item Calling \code{&&} or \code{||} with either argument of
      length greater than one now gives a warning (which it is intended
      will become an error).

      \item Calling \code{if()} or \code{while()} with a condition of
      length greater than one gives an error rather than a warning.
      Consequently, environment variable
      \env{_R_CHECK_LENGTH_1_CONDITION_} no longer has any effect.

      \item Windows users should consult the WINDOWS section below for
      some profound changes including
      \itemize{
	\item Support for 32-bit builds has been dropped.
	\item UTF-8 locales are used where available.
	\item The default locations for the \R installation and personal
	library folder have been changed.
      }

      Thanks to Tomas Kalibera for months of work on the Windows port
      for this release.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{matrix(x, n, m)} now warns in more cases where
      \code{length(x)} differs from \code{n * m}, as suggested by Abby